--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,20 @@
 {
+  "name": "my-app",
+  "version": "1.0.0",
+  "description": "",
+  "main": "backend/index.js",
+  "scripts": {
+    "start": "node backend/index.js"
+  },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.15",
+    "dotenv": "^8.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.4",
-    "nodemailer": "^6.9.14"
-  }
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.4.17"
+  },
+  "author": "",
+  "license": "ISC"
 }
