--- a/package.json
+++ b/package.json
@@ -13,10 +13,18 @@
     "dotenv": "^10.0.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.4.3",
     "nodemailer": "^6.9.14"
   },
   "optionalDependencies": {
     "bcrypt": "^5.1.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.25.0",
+    "babel-loader": "^9.1.3",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   }
 }
