--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.4.3",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14"
   },
   "optionalDependencies": {
