--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.4.3",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14"
