--- a/frontend/json/manifest.json
+++ b/frontend/json/manifest.json
@@ -1,20 +1,21 @@
 {
-  "name": "Anestesiólogos del Valle",
-  "short_name": "ADV",
-  "start_url": "index.html",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#0056b3",
-  "icons": [
-    {
-      "src": "images/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "images/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
-}
+    "name": "Anestesiólogos del Valle",
+    "short_name": "ADV",
+    "start_url": "../index.html",
+    "display": "standalone",
+    "background_color": "#ffffff",
+    "theme_color": "#0056b3",
+    "icons": [
+      {
+        "src": "/images/icons/icon-192x192.png",  
+        "sizes": "192x192",
+        "type": "image/png"
+      },
+      {
+        "src": "/images/icons/icon-512x512.png",  
+        "sizes": "512x512",
+        "type": "image/png"
+      }
+    ]
+  }
+  
