--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "backend/index.js",
   "scripts": {
     "start": "node backend/index.js",
+    "dev": "nodemon backend/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -26,6 +27,7 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "babel-loader": "^9.1.3",
+    "nodemon": "^3.1.10",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4"
   }
